Create separate shared-frontend library

--- a/.env
+++ b/.env
@@ -33,3 +33,4 @@ USER_AVATARS_BUCKET_URL=http://user:password@minio:9000/user-avatars
 # OAuth
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
+VITE_OAUTH_GOOGLE_CLIENT_ID=asdasda
