--- a/apps/web-e2e/package.json
+++ b/apps/web-e2e/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@moaitime/shared-common": "workspace:*",
+    "@moaitime/shared-frontend": "workspace:*",
     "concurrently": "^8.2.2",
     "cypress": "^13.0.0",
     "start-server-and-test": "^2.0.3"
