--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -33,6 +33,7 @@
       "@moaitime/database-testing": ["../../packages/database-testing/src/index.ts"],
       "@moaitime/emails-core": ["../../packages/emails-core/src/index.ts"],
       "@moaitime/emails-mailer": ["../../packages/emails-mailer/src/index.ts"],
+      "@moaitime/shared-frontend": ["../../packages/shared-frontend/src/index.ts"],
       "@moaitime/shared-backend": ["../../packages/shared-backend/src/index.ts"],
       "@moaitime/shared-common": ["../../packages/shared-common/src/index.ts"],
       "@moaitime/shared-queue-worker": ["../../packages/shared-queue-worker/src/index.ts"],
