--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,6 @@
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "^10.4.16",
-    "postcss": "8.4.21",
-    "vite-tsconfig-paths": "^4.3.1"
+    "postcss": "8.4.21"
   }
 }
