--- a/packages/shared-frontend/tsconfig.json
+++ b/packages/shared-frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@moaitime/tsconfig-config/tsconfig.frontend.json",
   "include": ["src/**/*"],
   "compilerOptions": {
     "types": ["vite/client"]
