--- a/packages/database-services/package.json
+++ b/packages/database-services/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "drizzle-orm": "^0.30.0",
+    "openid-client": "^5.6.5",
     "ua-parser-js": "^1.0.37",
     "uuid": "^9.0.1"
   },
