--- a/configs/tsconfig-config/tsconfig.frontend.json
+++ b/configs/tsconfig-config/tsconfig.frontend.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
   }
 }
