Implement resend mailer and rework some of the environment variables stuff to group them better

--- a/.env
+++ b/.env
@@ -21,12 +21,20 @@ API_BASE_URL=http://localhost:3636
 # Logger
 LOGGER_LEVEL=trace
 
-# URLs
+# Databases
 # IMPORTANT NOTE - if the username of password have special characters, YOU MUST ENCODE THEM!
 POSTGRESQL_URL=postgresql://user:password@postgres:5432/database?schema=public
 REDIS_URL=redis://redis:6379
+
+# Queues
 RABBITMQ_URL=amqp://user:password@rabbitmq:5672
-SMTP_URL=smtp://user:password@smtp:587
+
+# Mailer
+MAILER_FROM='MoaiTime Mailer <noreply@moaitime.com>'
+MAILER_SMTP_URL=
+MAILER_RESEND_API_KEY=
+
+# Storage
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@minio:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@minio:9000/user-avatars
 
