--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,12 @@
 ########## Application ##########
-# URLs
+# Databases
 POSTGRESQL_URL=postgresql://user:password@localhost:5432/database?schema=public
 REDIS_URL=redis://localhost:6379
+
+# Queues
 RABBITMQ_URL=amqp://user:password@localhost:5672
+
+# Storage
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@localhost:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@localhost:9000/user-avatars
 
