--- a/packages/emails-mailer/package.json
+++ b/packages/emails-mailer/package.json
@@ -23,9 +23,10 @@
     "@moaitime/emails-core": "workspace:*",
     "@moaitime/logging": "workspace:*",
     "@moaitime/shared-backend": "workspace:*",
-    "@react-email/render": "^0.0.10",
-    "nodemailer": "^6.9.7",
-    "react": "18.2.0"
+    "@react-email/render": "^0.0.12",
+    "nodemailer": "^6.9.13",
+    "react": "18.2.0",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@moaitime/tailwind-config": "workspace:*",
