Fix docker for web container

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ TZ=UTC
 
 # Ports
 # This is the port for the API app. Can be changed for local environment if not using containers, but should be left as 3636 for production
+WEB_PORT=4200
 API_PORT=3636
 
 ########## Application ##########
