--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -48,6 +48,7 @@
       "@moaitime/bullmq": ["../../packages/bullmq/src/index.ts"],
       "@moaitime/redis": ["../../packages/redis/src/index.ts"],
       "@moaitime/job-runner": ["../../packages/job-runner/src/index.ts"],
+      "@moaitime/health-checker": ["../../packages/health-checker/src/index.ts"],
       "@moaitime/uploader": ["../../packages/uploader/src/index.ts"],
       "@moaitime/global-events-notifier": ["../../packages/global-events-notifier/src/index.ts"],
       "@moaitime/global-events-processor": ["../../packages/global-events-processor/src/index.ts"],
