--- a/apps/cli/Dockerfile
+++ b/apps/cli/Dockerfile
@@ -36,9 +36,9 @@ COPY --from=builder /app/pruned/dist .
 COPY --from=builder /app/pruned/node_modules ./node_modules
 
 RUN echo '#!/bin/sh' > /app/cli && \
-    echo 'exec node /app/apps/cli/dist/main.js "$@"' >> /app/cli && \
+    echo 'exec node /app/main.js "$@"' >> /app/cli && \
     chmod +x /app/cli
 
 HEALTHCHECK --interval=30s --timeout=15s CMD /app/cli health:check
 
-CMD ["node", "./main.js"]
+ENTRYPOINT [ "/app/cli" ]
