--- a/docker/compose.overrides.production.yaml
+++ b/docker/compose.overrides.production.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   moaitime-api:
-    image: ghcr.io/bobalazek/moaitime/moaitime-api:latest
+    image: moaitime/moaitime-api:latest
     env_file:
       - ../.env.generated
     logging:
@@ -12,7 +12,7 @@ services:
         max-file: '10'
 
   moaitime-web:
-    image: ghcr.io/bobalazek/moaitime/moaitime-web:latest
+    image: moaitime/moaitime-web:latest
     env_file:
       - ../.env.generated
     logging:
@@ -22,7 +22,7 @@ services:
         max-file: '10'
 
   moaitime-cli:
-    image: ghcr.io/bobalazek/moaitime/moaitime-cli:latest
+    image: moaitime/moaitime-cli:latest
     env_file:
       - ../.env.generated
     logging:
@@ -32,7 +32,7 @@ services:
         max-file: '10'
 
   moaitime-cli-jobs-runner-start:
-    image: ghcr.io/bobalazek/moaitime/moaitime-cli:latest
+    image: moaitime/moaitime-cli:latest
     env_file:
       - ../.env.generated
     logging:
