--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ REDIS_URL=redis://redis:6379
 RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 
 # Mailer
-MAILER_FROM='MoaiTime Mailer <noreply@moaitime.com>'
+MAILER_FROM="MoaiTime Mailer <noreply@moaitime.com>"
 MAILER_SMTP_URL=
 MAILER_RESEND_API_KEY=
 
