--- a/apps/cli/Dockerfile
+++ b/apps/cli/Dockerfile
@@ -32,6 +32,9 @@ WORKDIR /app
 ARG NODE_ENV=production
 ENV NODE_ENV=$NODE_ENV
 
+# Install PostgreSQL Client (pg_dump). Need for database backup
+RUN apt-get update && apt-get install -y postgresql-client
+
 COPY --from=builder /app/.env ./.env
 COPY --from=builder /app/.env.production ./.env.production
 COPY --from=builder /app/pruned/dist ./dist
