Database backup and recovery WIP

--- a/.env
+++ b/.env
@@ -27,6 +27,10 @@ LOGGER_LEVEL=trace
 POSTGRESQL_URL=postgresql://user:password@postgres:5432/database?schema=public
 REDIS_URL=redis://redis:6379
 
+# Database Backups
+REMOTE_POSTGRESQL_URL=
+POSTGRESQL_BACKUP_BUCKET_URL=http://user:password@minio:9999/database-backups
+
 # Queues
 RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 
