--- a/.env.local.example
+++ b/.env.local.example
@@ -3,6 +3,9 @@
 POSTGRESQL_URL=postgresql://user:password@localhost:5432/database?schema=public
 REDIS_URL=redis://localhost:6379
 
+# Database Backups
+POSTGRESQL_BACKUP_BUCKET_URL=http://user:password@localhost:9999/database-backups
+
 # Queues
 RABBITMQ_URL=amqp://user:password@localhost:5672
 
