Final bits for database backups

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -53,7 +53,7 @@ services:
     environment:
       - MINIO_ROOT_USER=user
       - MINIO_ROOT_PASSWORD=password
-      - MINIO_DEFAULT_BUCKETS=user-avatars,user-data-exports
+      - MINIO_DEFAULT_BUCKETS=user-avatars,user-data-exports,database-backups
     volumes:
       - minio-data:/data
     ports:
