--- a/apps/cli/Dockerfile
+++ b/apps/cli/Dockerfile
@@ -6,7 +6,6 @@ FROM base AS builder
 
 WORKDIR /app
 
-RUN apk add --no-cache libc6-compat
 RUN npm install -g pnpm
 RUN npm install -g turbo
 
@@ -31,7 +30,7 @@ ARG NODE_ENV=production
 ENV NODE_ENV=$NODE_ENV
 
 # Install PostgreSQL Client (pg_dump). Need for database backup
-RUN apt update && apt install -y postgresql-client
+RUN apt-get update && apt-get install -y postgresql-client
 
 COPY --from=builder /app/.env ./.env
 COPY --from=builder /app/.env.production ./.env.production
