--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-confetti-explosion": "^2.1.2",
+    "react-device-detect": "2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
