--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -47,6 +47,7 @@
     "date-fns-tz": "^2.0.0",
     "express": "4.18.2",
     "gray-matter": "^4.0.3",
+    "nestjs-real-ip": "3.0.1",
     "reflect-metadata": "^0.1.14",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
