Docker file tweaks

--- a/apps/cli/Dockerfile
+++ b/apps/cli/Dockerfile
@@ -6,20 +6,18 @@ FROM base AS builder
 
 WORKDIR /app
 
+ARG PROJECT=@moaitime/cli
+
+RUN apk add --no-cache libc6-compat
 RUN npm install -g pnpm
 RUN npm install -g turbo
 
 COPY . .
 
-# This here is a bit of a chicken and egg problem. We want to install turbo with pnpm,
-# but we need to run turbo prune to install the correct dependencies.
-# For now we will just install it globally with npm above, and then for actual building,
-# we will use the pnpm version of turbo.
-RUN turbo prune @moaitime/cli --docker
-
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-RUN pnpm turbo run build --filter=@moaitime/cli
-RUN pnpm --filter=@moaitime/cli --prod deploy pruned
+RUN turbo prune ${PROJECT} --docker
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --workspace-root --frozen-lockfile
+RUN pnpm --filter=${PROJECT} --prod deploy pruned
+RUN pnpm turbo run build --filter=${PROJECT}
 
 # Runner
 FROM base AS runner
@@ -29,7 +27,7 @@ WORKDIR /app
 ARG NODE_ENV=production
 ENV NODE_ENV=$NODE_ENV
 
-# Install PostgreSQL Client (pg_dump). Need for database backup
+# Install PostgreSQL Client (pg_dump). Need for database backup. This is the only reason we are NOT using alpine image.
 RUN apt-get update && apt-get install -y postgresql-client
 
 COPY --from=builder /app/.env ./.env
