--- a/apps/cli/Dockerfile
+++ b/apps/cli/Dockerfile
@@ -8,13 +8,16 @@ WORKDIR /app
 
 ARG PROJECT=@moaitime/cli
 
-RUN npm install -g pnpm
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+
+RUN corepack enable
 RUN npm install -g turbo
 
 COPY . .
 
 RUN turbo prune ${PROJECT} --docker
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --workspace-root --frozen-lockfile
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile --ignore-scripts
 RUN pnpm turbo run build --filter=${PROJECT}
 RUN pnpm --filter=${PROJECT} --prod deploy pruned
 
