--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ WEB_PORT=4200
 API_PORT=3636
 
 ########## Application ##########
-WEB_BASE_URL=http://localhost:4200
-API_BASE_URL=http://localhost:3636
+WEB_URL=http://localhost:4200
+API_URL=http://localhost:3636
 
 # Logger
 LOGGER_LEVEL=trace
