--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@moaitime/eslint-config": "workspace:*",
     "@moaitime/prettier-config": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
