--- a/.env
+++ b/.env
@@ -31,6 +31,8 @@ REDIS_URL=redis://redis:6379
 RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 
 # Mailer
+# To be able to send emails, you will either need to provide the SMTP URL or the Resend API key.
+# It will use the Resend API key if it is provided, otherwise it will use the SMTP URL.
 MAILER_FROM="MoaiTime Mailer <noreply@moaitime.com>"
 MAILER_SMTP_URL=
 MAILER_RESEND_API_KEY=
