--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -32,6 +32,7 @@ ENV NODE_ENV=$NODE_ENV
 ARG WEB_PORT=4200
 ENV WEB_PORT=$WEB_PORT
 
+RUN apt update && apt install -y wget
 RUN sh -c "curl -fsSL https://bun.sh/install | bash"
 
 COPY ./apps/web/src/server.ts .
