refactor: tidy up documentation and docker deployment stuff

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,6 +6,11 @@ REDIS_URL=redis://localhost:6379
 # Queues
 RABBITMQ_URL=amqp://user:password@localhost:5672
 
+# Mailer
+MAILER_FROM="MoaiTime Mailer <noreply@moaitime.com>"
+MAILER_SMTP_URL=
+MAILER_RESEND_API_KEY=
+
 # Storage
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@localhost:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@localhost:9000/user-avatars
