--- a/apps/web-e2e/package.json
+++ b/apps/web-e2e/package.json
@@ -8,7 +8,7 @@
     "dev:e2e": "start-server-and-test servers:start \":4200|:3636\" cypress:open",
     "e2e": "start-server-and-test servers:start \":4200|:3636\" cypress:run",
     "lint": "eslint .",
-    "servers:start": "cd ../../ && pnpm build && concurrently --kill-others \"cd ./apps/web && pnpm serve\" \"cd ./apps/api && pnpm serve\" \"pnpm cli jobs:runner:start\""
+    "servers:start": "cd ../../ && pnpm build && concurrently --kill-others \"cd ./apps/web && NODE_ENV=test pnpm serve\" \"cd ./apps/api && NODE_ENV=test pnpm serve\" \"NODE_ENV=test pnpm cli jobs:runner:start\""
   },
   "dependencies": {
     "@moaitime/shared-common": "workspace:*",
