build: re-enable CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test Workflow
 
 on:
   workflow_dispatch:
-#  push:
+  push:
 
 jobs:
   test-and-benchmark:
@@ -68,6 +68,6 @@ jobs:
 
       - name: pnpm - Test
         run: pnpm test
-
-      - name: pnpm - E2E
-        run: pnpm e2e
+# Wil re-enable this once we have all the bits fixed and possibly optimised, as it takes quite a long time to run all of the tests
+#      - name: pnpm - E2E
+#        run: pnpm e2e
