--- a/k8s/moaitime-web.yaml
+++ b/k8s/moaitime-web.yaml
@@ -25,7 +25,10 @@ spec:
             - containerPort: 4200
               hostPort: 4200
               protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: '1'
+              memory: '2G'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 status: {}
