--- a/k8s/minio.yaml
+++ b/k8s/minio.yaml
@@ -10,7 +10,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 20Gi
 status: {}
 ---
 apiVersion: apps/v1
