--- a/k8s/moaitime-api.yaml
+++ b/k8s/moaitime-api.yaml
@@ -25,7 +25,10 @@ spec:
             - containerPort: 3636
               hostPort: 3636
               protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: '1'
+              memory: '2G'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 status: {}
