--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -10,7 +10,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 5Gi
 status: {}
 ---
 apiVersion: v1
@@ -25,7 +25,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 5Gi
 status: {}
 ---
 apiVersion: apps/v1
