fix: revert env variable generation and split the mailer variable into name and email

--- a/.env
+++ b/.env
@@ -33,7 +33,8 @@ RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 # Mailer
 # To be able to send emails, you will either need to provide the SMTP URL or the Resend API key.
 # It will use the Resend API key if it is provided, otherwise it will use the SMTP URL.
-MAILER_FROM="MoaiTime Mailer <noreply@moaitime.com>"
+MAILER_FROM_NAME="MoaiTime Mailer"
+MAILER_FROM_EMAIL=noreply@moaitime.com
 MAILER_SMTP_URL=
 MAILER_RESEND_API_KEY=
 
