fix: absolute patchs to tsconfig

--- a/apps/web-e2e/tsconfig.json
+++ b/apps/web-e2e/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@moaitime/tsconfig-config/tsconfig.base.json",
   "include": ["src/**/*"],
   "compilerOptions": {
     "sourceMap": false
