--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -12,7 +12,7 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
 RUN corepack enable
-RUN npm install -g turbo
+RUN npm install -g turbo@1.13.3
 
 COPY . .
 
