chore: rework some bits on the environment variables

--- a/.env
+++ b/.env
@@ -35,8 +35,8 @@ RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 # It will use the Resend API key if it is provided, otherwise it will use the SMTP URL.
 MAILER_FROM_NAME="MoaiTime Mailer"
 MAILER_FROM_EMAIL=noreply@moaitime.com
-MAILER_SMTP_URL=
-MAILER_RESEND_API_KEY=
+# MAILER_SMTP_URL=smtp://user:password@localhost:1025
+MAILER_RESEND_API_KEY=resend-api-key
 
 # Storage
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@minio:9000/user-data-exports
@@ -44,5 +44,5 @@ USER_AVATARS_BUCKET_URL=http://user:password@minio:9000/user-avatars
 POSTGRESQL_BACKUP_BUCKET_URL=http://user:password@minio:9000/database-backups
 
 # OAuth
-OAUTH_GOOGLE_CLIENT_ID=
-OAUTH_GOOGLE_CLIENT_SECRET=
+OAUTH_GOOGLE_CLIENT_ID=oauth-google-client-id
+OAUTH_GOOGLE_CLIENT_SECRET=oauth-google-client-secret
