--- a/.env.local.example
+++ b/.env.local.example
@@ -7,8 +7,8 @@ REDIS_URL=redis://localhost:6379
 RABBITMQ_URL=amqp://user:password@localhost:5672
 
 # Mailer
-MAILER_SMTP_URL=
-MAILER_RESEND_API_KEY=
+# MAILER_SMTP_URL=smtp://user:password@localhost:1025
+MAILER_RESEND_API_KEY=resend-api-key
 
 # Storage
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@localhost:9000/user-data-exports
@@ -16,5 +16,6 @@ USER_AVATARS_BUCKET_URL=http://user:password@localhost:9000/user-avatars
 POSTGRESQL_BACKUP_BUCKET_URL=http://user:password@localhost:9000/database-backups
 
 # OAuth
-OAUTH_GOOGLE_CLIENT_ID=
-OAUTH_GOOGLE_CLIENT_SECRET=
+OAUTH_GOOGLE_CLIENT_ID=oauth-google-client-id
+OAUTH_GOOGLE_CLIENT_SECRET=oauth-google-client-secret
+
