--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -26,6 +26,7 @@
     "@moaitime/job-runner": "workspace:*",
     "@moaitime/logging": "workspace:*",
     "@moaitime/processes": "workspace:*",
+    "@moaitime/shared-backend": "workspace:*",
     "commander": "^11.1.0",
     "tsx": "^4.19.1"
   }
