--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -13,6 +13,7 @@ ENV PATH="$PNPM_HOME:$PATH"
 
 RUN apk add --no-cache libc6-compat
 
+RUN npm install -g corepack@latest
 RUN corepack enable
 RUN npm install -g turbo@2.1.3
 
