--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -11,6 +11,7 @@ ARG PROJECT=@moaitime/web
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
+RUN npm install -g corepack@latest
 RUN corepack enable
 RUN npm install -g turbo@2.1.3
 
